--- a/src/main/webapp/admin/index.xhtml
+++ b/src/main/webapp/admin/index.xhtml
@@ -14,7 +14,7 @@
             <ui:include src="../templates/adminHeader.xhtml" />
         </ui:define>
         <ui:define name="content">
-            Mooie admin test
+           lol
         </ui:define>
 
     </ui:composition>
