--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,17 +1,46 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-        xmlns:ui="http://java.sun.com/jsf/facelets"
-        xmlns:f="http://xmlns.jcp.org/jsf/core"
-        xmlns:h="http://xmlns.jcp.org/jsf/html"
->
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
+<h:head>
+    <h:outputStylesheet library="bootstrap-4.1.3-dist" name="css/bootstrap.css"/>
+    <h:outputStylesheet library="bootstrap-4.1.3-dist" name="js/bootstrap.js"/>
+    <h:outputStylesheet library="bootstrap-4.1.3-dist" name="js/bootstrap.bundle.js"/>
+</h:head>
 <h:body>
 
     <ui:composition template="/templates/layout.xhtml">
         <ui:define name="content">
-            Mooie test
+
+
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="./resources/images/headerlogo.png"  alt="First slide"/>
+                    </div>
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="./resources/images/images.jpg"  alt="Second slide"/>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="./resources/images/headerlogo.png"  alt="Third slide"/>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+
+
+
+
+
         </ui:define>
+
     </ui:composition>
 
 </h:body>
