--- a/src/main/webapp/nav.xhtml
+++ b/src/main/webapp/nav.xhtml
@@ -3,7 +3,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
 <h:head>
-    <h:outputStylesheet library="bootstrap-4.1.3-dist" name="bootstrap.css"/>
+    <h:outputStylesheet library="bootstrap-4.1.3-dist" name="css/bootstrap.css"/>
 </h:head>
 <h:body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
