--- a/src/main/webapp/datatable.xhtml
+++ b/src/main/webapp/datatable.xhtml
@@ -9,29 +9,33 @@
       xmlns:b="http://bootsfaces.net/ui"
 xmlns:c="http://java.sun.com/jsp/jstl/core">
 
-<h:head>
-    <title>Reizen</title>
-
-</h:head>
-
+<ui:composition template="/templates/layout.xhtml">
+<ui:define name="header">
+    <ui:include src="/templates/adminHeader.xhtml" />
+</ui:define>
+    <ui:define name="title">Onze reizen</ui:define>
+<ui:define name="content">
+<br/>
 <h:body>
     <h:form>
         <ui:composition template="/templates/layout.xhtml">
             <ui:define name="content">
                 <h1>Onze reizen : </h1>
                 <div class="row">
-                    <b:dataTable value="#{reisController.reizen}"
+                    <b:dataTable value="#{ReisController.reizenFilterByVertrekLocatie}"
                                  var="reis">
-                        <b:dataTableColumn  value="#{reis.vertrekLocatie.naam}"  header="#{reis.vertrekLocatie}" ><i class="material-icons">flight_takeoff</i></b:dataTableColumn>
-                        <b:dataTableColumn header="#{reis.vertrekTijd}" value="#{reis.vertrekTijd.time}" />
-                        <b:dataTableColumn header="#{reis.aankomstLocatie}" value="#{reis.aankomstLocatie.naam}" />
-                        <b:dataTableColumn header="#{reis.aankomstTijd}" value="#{reis.aankomstTijd.time}" />
-                        <b:dataTableColumn value="#{reis.plaatsen}" />
-                        <b:dataTableColumn value="#{reis.prijsPerPersoon}"  />
+                        <b:dataTableColumn label="Vertrek Locatie" value="#{reis.vertrekLocatie.naam}"/>
+                        <b:dataTableColumn label="Vertrek Tijd" value="#{reis.vertrekTijd}" />
+                        <b:dataTableColumn label="Aankomst Locatie" value="#{reis.aankomstLocatie.naam}" />
+                        <b:dataTableColumn label="Aankomst Tijd" value="#{reis.aankomstTijd}" />
+                        <b:dataTableColumn label="Aantal plaatsen" value="#{reis.plaatsen}" />
+                        <b:dataTableColumn label="Prijs per persoon" value="#{reis.prijsPerPersoon}"  />
                     </b:dataTable>
                 </div>
             </ui:define>
         </ui:composition>
     </h:form>
 </h:body>
+</ui:define>
+</ui:composition>
 </html>
