--- a/src/main/webapp/reizen.xhtml
+++ b/src/main/webapp/reizen.xhtml
@@ -5,53 +5,81 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui"
       xmlns:b="http://bootsfaces.net/ui"
 xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 <h:head>
-    <title>Reizen</title>
+    <ui:define name="title">Reizen bewerken</ui:define>
 
 </h:head>
 
 <h:body>
     <h:form>
         <ui:composition template="/templates/layout.xhtml">
+            <ui:define name="title">Uw boekingen</ui:define>
             <ui:define name="content">
-                <h1>Onze reizen : </h1>
-                <div class="row">
-                    <div class="col-4">
-                        <div class="list-group">
-                            <c:forEach var="reis" items="#{reisController.reizen}">
-                                <a href="#" class="list-group-item " >
-                                    <h4 class="list-group-item-heading"> <i class="material-icons">
-                                        flight_takeoff</i> #{reis.vertrekLocatie.naam} <i class="material-icons">
-                                        flight_land</i> #{reis.aankomstLocatie.naam} </h4>
-                                </a>
-                            </c:forEach>
-                           <!-- <a href="#" class="list-group-item active" >
-                                <h4 class="list-group-item-heading">Van {reis.} <i class="material-icons">
-                                    flight_takeoff
-                                </i></h4>
-                                <p class="list-group-item-text">List Group Item Text</p>
-                            </a>
-                            <a href="#" class="list-group-item">Second item</a>
-                            <a href="#" class="list-group-item">Third item</a> -->
-                        </div>
-<script type="javascript">
-    function showDetails() {
+                <br/>
+                <div class="accordion" id="accordionReizen">
+                    <h:form>
+                        <ui:repeat value="#{ReisController.reizen}" var="reis">
 
+                            <div class="card">
+                                <div class="card-header" id="heading#{reis.id}">
+                                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse#{reis.id}" aria-controls="collapse#{reis.id}">
+                                        <div class="row">
+                                            <div class="col-12">
+                                                <h:outputText value="#{reis}" />
+                                            </div>
+                                        </div>
+                                    </button>
+                                </div>
 
-    }
+                                <div id="collapse#{reis.id}" class="collapse" aria-labelledby="heading#{reis.id}" data-parent="#accordionReizen">
+                                    <div class="card-body">
 
-</script>
-                    </div>
-                    <div class="col-8">
-                        <p id="reisVan">Van : reisvertrek - reistijdvertrek</p>
-                        <p id="reisNaar">Naar : reisaankomst - reistijdaankomst</p>
-                        <p id="reisprijs">prijs</p>
-                        <button type="submit">Boeken</button>
-                    </div>
+                                        <div class="form-group row">
+                                            <label for="vertrekLocatie#{reis.id}" class="col-sm-2 col-form-label">Vertreklocatie</label>
+                                            <div class="col-sm-10">
+                                                <h:inputText value="#{reis.vertrekLocatie}" styleClass="form-control" id="displayVertrekLocatie#{reis.id}" readonly="true"/>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group row">
+                                            <label for="vertrekTijd#{reis.id}" class="col-sm-2 col-form-label">Vertrektijd</label>
+                                            <div class="col-sm-10">
+                                                <h:inputText value="#{reis.vertrekTijd}" styleClass="form-control" id="displayVertrekTijd#{reis.id}" readonly="true"/>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group row">
+                                            <label for="aankomstLocatie#{reis.id}" class="col-sm-2 col-form-label">Aankomstlocatie</label>
+                                            <div class="col-sm-10">
+                                                <h:inputText value="#{reis.aankomstLocatie}" styleClass="form-control" id="displayAankomstLocatie#{reis.id}" readonly="true"/>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group row">
+                                            <label for="aankomstTijd#{reis.id}" class="col-sm-2 col-form-label">AankomstTijd</label>
+                                            <div class="col-sm-10">
+                                                <h:inputText value="#{reis.aankomstTijd}" styleClass="form-control" id="displayAankomstTijd#{reis.id}" readonly="true"/>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group row">
+                                            <label for="transportmiddel#{reis.id}" class="col-sm-2 col-form-label">Transportmiddel</label>
+                                            <div class="col-sm-10">
+                                                <h:inputText value="#{reis.transportmiddel}" styleClass="form-control" id="displayTransportmiddel#{reis.id}" readonly="true"/>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+
+                        </ui:repeat>
+                    </h:form>
                 </div>
             </ui:define>
         </ui:composition>
