--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -3,40 +3,40 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
 <h:head>
-    <h:outputStylesheet library="bootstrap-4.1.3-dist" name="css/bootstrap.css"/>
-    <h:outputStylesheet library="bootstrap-4.1.3-dist" name="js/bootstrap.js"/>
-    <h:outputStylesheet library="bootstrap-4.1.3-dist" name="js/bootstrap.bundle.js"/>
+
 </h:head>
 <h:body>
     <ui:composition template="/templates/layout.xhtml">
         <ui:define name="content">
 
+            <h2 class="nieuws">Nieuws</h2>
 
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./resources/images/headerlogo.png"  alt="First slide"/>
-                    </div>
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="./resources/images/images.jpg"  alt="Second slide"/>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./resources/images/headerlogo.png"  alt="Third slide"/>
+
+            <div class="row col-12">
+                <div class="card col-4" style="width: 18rem;">
+                    <img class="card-img-top" src="./resources/images/staking.jpg" alt="Card image cap"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Staking Ryanair</h5>
+                        <p class="card-text">De belgische vluchten vanuit ryanair kunnen vertragingen oplopen door de staking die er al enkele dagen gaande is.</p>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
+
+                <div class="card col-4" style="width: 18rem;">
+                    <img class="card-img-top" src="./resources/images/vulkaan.jpg" alt="Card image cap"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Vulkaan</h5>
+                        <p class="card-text">Vulkaan katrina zorgt voor ernstige vertragingen in Hawai.</p>
+                    </div>
+                </div>
+
+                <div class="card col-4" style="width: 18rem;">
+                    <img class="card-img-top rounded" src="./resources/images/bagage.jpg" alt="Card image cap"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Bagage</h5>
+                        <p class="card-text">Onze maatschappijen waar wij mee samenwerken zijn onlangs verkozen tot beste bagage afhandelaars van de wereld. Dit is bepaald door het agentschap van luchtverkeer.</p>
+                    </div>
+                </div>
             </div>
-
-
-
-
 
         </ui:define>
 
