--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -9,28 +9,26 @@
     <ui:composition template="/templates/layout.xhtml">
         <ui:define name="content">
 
+
             <h2 class="nieuws">Nieuws</h2>
 
-
-            <div class="row col-12">
-                <div class="card col-4" style="width: 18rem;">
-                    <img class="card-img-top" src="./resources/images/staking.jpg" alt="Card image cap"/>
+            <div class="card-deck">
+                <div class="card">
+                    <img class="card-img-top" src="./resources/images/staking.jpg" alt="Staking" />
                     <div class="card-body">
                         <h5 class="card-title">Staking Ryanair</h5>
                         <p class="card-text">De belgische vluchten vanuit ryanair kunnen vertragingen oplopen door de staking die er al enkele dagen gaande is.</p>
                     </div>
                 </div>
-
-                <div class="card col-4" style="width: 18rem;">
-                    <img class="card-img-top" src="./resources/images/vulkaan.jpg" alt="Card image cap"/>
+                <div class="card">
+                    <img class="card-img-top" src="./resources/images/vulkaan.jpg" alt="Vulkaan" />
                     <div class="card-body">
                         <h5 class="card-title">Vulkaan</h5>
                         <p class="card-text">Vulkaan katrina zorgt voor ernstige vertragingen in Hawai.</p>
                     </div>
                 </div>
-
-                <div class="card col-4" style="width: 18rem;">
-                    <img class="card-img-top rounded" src="./resources/images/bagage.jpg" alt="Card image cap"/>
+                <div class="card">
+                    <img class="card-img-top" src="./resources/images/bagage.jpg" alt="Bagage" />
                     <div class="card-body">
                         <h5 class="card-title">Bagage</h5>
                         <p class="card-text">Onze maatschappijen waar wij mee samenwerken zijn onlangs verkozen tot beste bagage afhandelaars van de wereld. Dit is bepaald door het agentschap van luchtverkeer.</p>
