--- a/src/main/webapp/admin/reizen.xhtml
+++ b/src/main/webapp/admin/reizen.xhtml
@@ -8,6 +8,11 @@
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
       xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 <ui:composition template="/templates/layout.xhtml">
+
+    <f:metadata >
+        <f:viewAction action="#{ViewController.setActiveTab('reizen')}" />
+    </f:metadata>
+
     <ui:define name="header">
         <ui:include src="/templates/adminHeader.xhtml" />
     </ui:define>
@@ -114,11 +119,11 @@
                 </div>
 
                 <div class="modal fade" id="reisModal" tabindex="-1" role="dialog" aria-labelledby="reisModallabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
+                    <div class="modal-dialog modal-lg" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="reisModallabel">
-                                    Reis #{ReisController.geselecteerdeReis}
+                                    Reis aanpassen/wijzigen
                                 </h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
@@ -136,25 +141,11 @@
                                 </div>
 
                                 <div class="form-group row">
-                                    <label for="updateVertrekTijd" class="col-sm-3 col-form-label">Vertrektijd</label>
-                                    <div class="col-sm-9">
-                                        <h:inputText value="#{ReisController.geselecteerdeReis.vertrekTijd}" binding="#{vertrekTijd}" styleClass="form-control" id="updateVertrekTijd" />
-                                    </div>
-                                </div>
-
-                                <div class="form-group row">
                                     <label for="updateAankomstLocatie" class="col-sm-3 col-form-label">Aankomstlocatie</label>
                                     <div class="col-sm-9">
                                         <h:selectOneMenu class="form-control" binding="#{aankomstLocatieId}" id="updateAankomstLocatie" value="#{ReisController.geselecteerdeReis.aankomstLocatie.id}">
                                             <f:selectItems  value="#{LocatieController.locaties}" var="l" itemLabel="#{l}" itemValue="#{l.id}" />
                                         </h:selectOneMenu>
-                                    </div>
-                                </div>
-
-                                <div class="form-group row">
-                                    <label for="updateAankomstTijd" class="col-sm-3 col-form-label">Aankomsttijd</label>
-                                    <div class="col-sm-9">
-                                        <h:inputText value="#{ReisController.geselecteerdeReis.aankomstTijd}" binding="#{aankomstTijd}" styleClass="form-control" id="updateAankomstTijd" />
                                     </div>
                                 </div>
 
@@ -181,7 +172,7 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <h:commandButton type="submit" action="#{ReisController.updateReis(ReisController.geselecteerdeReis.id, vertrekLocatieId, aankomstLocatieId, prijsPerPersoon, transportmiddel, plaatsen)}" styleClass="btn btn-primary" value="Sla reis op" />
+                                <h:commandButton type="submit" action="#{ReisController.updateReis(ReisController.geselecteerdeReis.id, vertrekLocatieId.value, aankomstLocatieId.value, prijsPerPersoon.value, transportmiddel.value, plaatsen.value)}" styleClass="btn btn-primary" value="Sla reis op" />
                             </div>
                         </div>
                     </div>
