added more navbar functionality

--- a/src/main/webapp/admin/gebruikers.xhtml
+++ b/src/main/webapp/admin/gebruikers.xhtml
@@ -13,6 +13,7 @@
         <f:viewAction action="#{ViewController.setActiveTab('gebruikers')}" />
     </f:metadata>
 
+    <ui:define name="carousel"></ui:define>
     <ui:define name="header">
         <ui:include src="/templates/adminHeader.xhtml" />
     </ui:define>
@@ -178,6 +179,7 @@
                         </div>
                     </div>
                 </div>
+
             </h:form>
         </div>
         <script>
