--- a/src/main/webapp/admin/locaties.xhtml
+++ b/src/main/webapp/admin/locaties.xhtml
@@ -13,6 +13,7 @@
             <f:viewAction action="#{ViewController.setActiveTab('locaties')}" />
         </f:metadata>
 
+        <ui:define name="carousel"></ui:define>
         <ui:define name="header">
             <ui:include src="/templates/adminHeader.xhtml" />
         </ui:define>
