--- a/src/main/webapp/admin/reizen.xhtml
+++ b/src/main/webapp/admin/reizen.xhtml
@@ -13,6 +13,7 @@
         <f:viewAction action="#{ViewController.setActiveTab('reizen')}" />
     </f:metadata>
 
+    <ui:define name="carousel"></ui:define>
     <ui:define name="header">
         <ui:include src="/templates/adminHeader.xhtml" />
     </ui:define>
