--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,6 +7,11 @@
 </h:head>
 <h:body>
     <ui:composition template="/templates/layout.xhtml">
+
+        <f:metadata >
+            <f:viewAction action="#{ViewController.setActiveTab('home')}" />
+        </f:metadata>
+
         <ui:define name="content">
 
 
@@ -14,21 +19,21 @@
 
             <div class="card-deck">
                 <div class="card">
-                    <img class="card-img-top" src="./resources/images/staking.jpg" alt="Staking" />
+                    <img class="card-img-top" src="/travelmore/resources/images/staking.jpg" alt="Staking" />
                     <div class="card-body">
                         <h5 class="card-title">Staking Ryanair</h5>
                         <p class="card-text">De belgische vluchten vanuit ryanair kunnen vertragingen oplopen door de staking die er al enkele dagen gaande is.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="./resources/images/vulkaan.jpg" alt="Vulkaan" />
+                    <img class="card-img-top" src="/travelmore/resources/images/vulkaan.jpg" alt="Vulkaan" />
                     <div class="card-body">
                         <h5 class="card-title">Vulkaan</h5>
                         <p class="card-text">Vulkaan katrina zorgt voor ernstige vertragingen in Hawai.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="./resources/images/bagage.jpg" alt="Bagage" />
+                    <img class="card-img-top" src="/travelmore/resources/images/bagage.jpg" alt="Bagage" />
                     <div class="card-body">
                         <h5 class="card-title">Bagage</h5>
                         <p class="card-text">Onze maatschappijen waar wij mee samenwerken zijn onlangs verkozen tot beste bagage afhandelaars van de wereld. Dit is bepaald door het agentschap van luchtverkeer.</p>
