--- a/src/main/webapp/bookingen.xhtml
+++ b/src/main/webapp/bookingen.xhtml
@@ -49,7 +49,7 @@ xmlns:c="http://java.sun.com/jsp/jstl/core">
                                         <div class="form-group row">
                                             <label for="vertrekTijd#{reis.id}" class="col-sm-2 col-form-label">Vertrektijd</label>
                                             <div class="col-sm-10">
-                                                <h:inputText value="#{reis.vertrekTijd}" styleClass="form-control" id="displayVertrekTijd#{reis.id}" readonly="true"/>
+                                                <h:inputText value="#{reis.vertrekTijd.time}" styleClass="form-control" id="displayVertrekTijd#{reis.id}" readonly="true"/>
                                             </div>
                                         </div>
 
@@ -63,7 +63,7 @@ xmlns:c="http://java.sun.com/jsp/jstl/core">
                                         <div class="form-group row">
                                             <label for="aankomstTijd#{reis.id}" class="col-sm-2 col-form-label">AankomstTijd</label>
                                             <div class="col-sm-10">
-                                                <h:inputText value="#{reis.aankomstTijd}" styleClass="form-control" id="displayAankomstTijd#{reis.id}" readonly="true"/>
+                                                <h:inputText value="#{reis.aankomstTijd.time}" styleClass="form-control" id="displayAankomstTijd#{reis.id}" readonly="true"/>
                                             </div>
                                         </div>
 
