--- a/src/main/webapp/datatable.xhtml
+++ b/src/main/webapp/datatable.xhtml
@@ -22,6 +22,7 @@ xmlns:c="http://java.sun.com/jsp/jstl/core">
         <ui:composition template="/templates/layout.xhtml">
             <ui:define name="content">
                 <h1>Onze reizen : </h1>
+                <h:form>
                 <div class="row">
                     <h:dataTable var="reis" class="table table-striped" value="#{ReisController.reizen}">
                         <h:column>
@@ -60,10 +61,12 @@ xmlns:c="http://java.sun.com/jsp/jstl/core">
                         </h:column>
 
                         <h:column>
-                            <h:commandButton class="btn btn-primary" value="boeken"/>
+                            <h:commandButton class="btn btn-primary" action="#{BookingController.navigateToBooken}" value="boeken"/>
                         </h:column>
                     </h:dataTable>
+
                 </div>
+                </h:form>
             </ui:define>
         </ui:composition>
     </h:form>
