--- a/src/main/webapp/admin/reizen.xhtml
+++ b/src/main/webapp/admin/reizen.xhtml
@@ -62,9 +62,17 @@
                                 </div>
 
                                 <div class="form-group row">
+                                    <label for="vertrekDatum#{reis.id}" class="col-sm-2 col-form-label">Vertrekdatum</label>
+                                    <div class="col-sm-4">
+                                        <h:inputText value="#{reis.vertrekTijd}" styleClass="form-control" id="displayVertrekDatum#{reis.id}" readonly="true">
+                                            <f:convertDateTime pattern="dd-MM-yyyy" />
+                                        </h:inputText>
+                                    </div>
                                     <label for="vertrekTijd#{reis.id}" class="col-sm-2 col-form-label">Vertrektijd</label>
-                                    <div class="col-sm-10">
-                                        <h:inputText value="#{reis.vertrekTijd}" styleClass="form-control" id="displayVertrekTijd#{reis.id}" readonly="true"/>
+                                    <div class="col-sm-4">
+                                        <h:inputText value="#{reis.vertrekTijd}" styleClass="form-control" id="displayVertrekTijd#{reis.id}" readonly="true">
+                                            <f:convertDateTime pattern="HH:mm" />
+                                        </h:inputText>
                                     </div>
                                 </div>
 
@@ -76,9 +84,17 @@
                                 </div>
 
                                 <div class="form-group row">
-                                    <label for="aankomstTijd#{reis.id}" class="col-sm-2 col-form-label">AankomstTijd</label>
-                                    <div class="col-sm-10">
-                                        <h:inputText value="#{reis.aankomstTijd}" styleClass="form-control" id="displayAankomstTijd#{reis.id}" readonly="true"/>
+                                    <label for="aankomstdatum#{reis.id}" class="col-sm-2 col-form-label">Aankomstdatum</label>
+                                    <div class="col-sm-4">
+                                        <h:inputText value="#{reis.aankomstTijd}" styleClass="form-control" id="displayAankomstDatum#{reis.id}" readonly="true">
+                                            <f:convertDateTime pattern="dd-MM-yyyy" />
+                                        </h:inputText>
+                                    </div>
+                                    <label for="aankomstTijd#{reis.id}" class="col-sm-2 col-form-label">Aankomsttijd</label>
+                                    <div class="col-sm-4">
+                                        <h:inputText value="#{reis.aankomstTijd}" styleClass="form-control" id="displayAankomstTijd#{reis.id}" readonly="true">
+                                            <f:convertDateTime pattern="HH:mm" />
+                                        </h:inputText>
                                     </div>
                                 </div>
 
@@ -136,6 +152,31 @@
                                     <label for="updateVertrekLocatie" class="col-sm-3 col-form-label">Vertreklocatie</label>
                                     <div class="col-sm-9">
                                         <h:selectOneMenu class="form-control" binding="#{vertrekLocatieId}" id="updateVertrekLocatie" value="#{ReisController.geselecteerdeReis.vertrekLocatie.id}">
+                                            <f:selectItems  value="#{LocatieController.locaties}" var="l" itemLabel="#{l}" itemValue="#{l.id}" />
+                                        </h:selectOneMenu>
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    <label for="updateVertrekDatum" class="col-sm-3 col-form-label">Vertrekdatum</label>
+                                    <div class="col-sm-4">
+                                        <h:inputText a:type="date" value="#{reis.vertrekTijd}" styleClass="form-control" id="updateVertrekDatum">
+                                            <f:convertDateTime pattern="MM-dd-yyyy" />
+                                        </h:inputText>
+                                    </div>
+                                    <label for="updateVertrekTijd" class="col-sm-3 col-form-label">Vertrektijd</label>
+                                    <div class="col-sm-3">
+                                        <h:inputText a:type="time" value="#{reis.vertrekTijd}" styleClass="form-control" id="updateVertrekTijd">
+                                            <f:convertDateTime pattern="HH:mm" />
+                                        </h:inputText>
+                                    </div>
+                                </div>
+
+
+                                <div class="form-group row">
+                                    <label for="updateVertreDatum" class="col-sm-3 col-form-label">Vertrekdatum</label>
+                                    <div class="col-sm-9">
+                                        <h:selectOneMenu class="form-control" binding="#{vertrekLocatieId}" id="updateVertreDatum" value="#{ReisController.geselecteerdeReis.vertrekLocatie.id}">
                                             <f:selectItems  value="#{LocatieController.locaties}" var="l" itemLabel="#{l}" itemValue="#{l.id}" />
                                         </h:selectOneMenu>
                                     </div>
