--- a/src/main/webapp/bezoeker/reizen.xhtml
+++ b/src/main/webapp/bezoeker/reizen.xhtml
@@ -61,7 +61,7 @@ xmlns:c="http://java.sun.com/jsp/jstl/core">
                         </h:column>
 
                         <h:column>
-                            <h:commandButton class="btn btn-primary" action="#{BookingController.navigateToBooken}" value="boeken"/>
+                            <h:commandButton class="btn btn-primary" action="#{BookingController.navigateToBooken(reis.id)}" value="boeken"/>
                         </h:column>
                     </h:dataTable>
 
