--- a/src/main/webapp/bezoeker/login.xhtml
+++ b/src/main/webapp/bezoeker/login.xhtml
@@ -23,12 +23,12 @@
                         <h:form class="login-form">
                             <div class="form-group">
                                 <label >Naam</label>
-                                <p:inputText value="#{GebruikerController.gebruiker.email}"  type="text" class="form-control"/>
+                                <h:inputText value="#{GebruikerController.gebruiker.email}"  type="text" class="form-control"/>
 
                             </div>
                             <div class="form-group">
                                 <label >Wachtwoord</label>
-                                <p:inputText value="#{GebruikerController.gebruiker.wachtwoord}"  type="password" class="form-control" />
+                                <h:inputText value="#{GebruikerController.gebruiker.wachtwoord}"  type="password" class="form-control" />
 
                             </div>
 
