--- a/src/main/webapp/admin/gebruikers.xhtml
+++ b/src/main/webapp/admin/gebruikers.xhtml
@@ -7,16 +7,12 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
       xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
-<ui:composition template="/templates/layout.xhtml">
+<ui:composition template="/templates/layout_admin.xhtml">
 
     <f:metadata >
         <f:viewAction action="#{ViewController.setActiveTab('gebruikers')}" />
     </f:metadata>
 
-    <ui:define name="carousel"></ui:define>
-    <ui:define name="header">
-        <ui:include src="/templates/adminHeader.xhtml" />
-    </ui:define>
     <ui:define name="title">Gebruikers bewerken</ui:define>
     <ui:define name="content">
         <br/>
