--- a/src/main/webapp/gebruiker/bookingen.xhtml
+++ b/src/main/webapp/gebruiker/bookingen.xhtml
@@ -80,9 +80,9 @@ xmlns:c="http://java.sun.com/jsp/jstl/core">
                                         <div class="form-group row">
                                             <label for="betaalt#{booking.reis.id}" class="col-sm-2 col-form-label">Betaalt</label>
                                             <div class="col-sm-10">
-                                                <h:inputText rendered="#{booking.isBetaald}" value="OK!" styleClass="form-control" id="displayBetaalt#{booking.reis.id}" readonly="true"/>
-                                                <h:commandButton rendered="#{!booking.isBetaald}" value="PayPal" class="form-control float-right"/>
-                                                <h:commandButton rendered="#{!booking.isBetaald}" value="Bancontact" class="form-control  float-right"/>
+                                                <h:inputText rendered="#{booking.isBetaald()}" value="OK!" styleClass="form-control" id="displayBetaalt#{booking.reis.id}" readonly="true"/>
+                                                <h:commandButton rendered="#{!booking.isBetaald()}" value="PayPal" action="#{BookingController.betaalReservatie(booking.id)}" class="btn btn-primary  mr-2 float-left"/>
+                                                <h:commandButton rendered="#{!booking.isBetaald()}" value="Bancontact" action="#{BookingController.betaalReservatie(booking.id)}" class="btn btn-primary mr-2 float-left"/>
                                             </div>
                                         </div>
                                     </div>
