--- a/src/main/webapp/admin/locaties.xhtml
+++ b/src/main/webapp/admin/locaties.xhtml
@@ -19,7 +19,7 @@
         <ui:define name="content">
             <div class="container-fluid">
                 <div class="row admintitle">
-                    <div class="col-col">
+                    <div class="col">
                         <h1>Locaties beheren</h1>
                     </div>
                     <div class="col-auto">
